@@ -30778,7 +30778,7 @@ The following might be problematic with a caption
 \Section{awesomebox.sty}
 %%%%%%%%%%%%%%%%%%%%%%%
 \<awesomebox.4ht\><<<
-% awesomebox.4ht (|version), generated from |jobname.tex
+% awesomebox.4ht	
 % Copyright 2020 TeX Users Group
 |<TeX4ht license text|>
 |<awesomebox config|>
@@ -31261,10 +31261,9 @@ of  \''<a>' elements.
 %%%%%%%%%%%%%%%%%%%%%
 
 \<endnotes.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% endnotes.4ht                          |version %
-% Copyright (C) |CopyYear.2001.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% endnotes.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.2001. Eitan M. Gurari
+|<TeX4ht copywrite|>
    |<fix endnotes|>
 \Hinput{endnotes}
 \endinput
