@@ -454,7 +454,7 @@ tex4ht-4ht, e.g., for adding cases to {\tt\string\exit:ifnot}.
 %  the copyright notice.
 %
 % |mkfilename (|version), generated from |jobname.4ht
-% Copyright 2009-2019 TeX Users Group
+% Copyright 2009-2021 TeX Users Group
 % Copyright 1997-2009 Eitan M. Gurari
 |<TeX4ht copywrite|>
 
